--- a/Graph Neural Networks/GAT.ipynb
+++ b/Graph Neural Networks/GAT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHJzaP1+wrCwYLWyh1x2PT",
+      "authorship_tag": "ABX9TyN+tg9BsBH5IOjM9ED/hU5t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/WhatRaSudeep/SAiDL-Spring-Assignment-2024/blob/main/GAT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/WhatRaSudeep/SAiDL-Spring-Assignment-2024/blob/main/Graph%20Neural%20Networks/GAT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,7 +36,13 @@
         "\n",
         "!pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
         "!pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "!pip install -q git+https://github.com/pyg-team/pytorch_geometric.git\n"
+        "!pip install -q git+https://github.com/pyg-team/pytorch_geometric.git\n",
+        "import torch\n",
+        "from torch.nn import Linear, Parameter\n",
+        "from torch_geometric.nn import MessagePassing\n",
+        "from torch_geometric.utils import add_self_loops, degree, to_dense_adj, softmax\n",
+        "import torch_scatter\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -45,7 +51,7 @@
         "id": "7cWkh6Z7LXKb",
         "outputId": "95d5a3d7-6c48-4a35-ae76-159d817bdca1"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,66 +71,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import torch\n",
-        "from torch.nn import Linear, Parameter\n",
-        "from torch_geometric.nn import MessagePassing\n",
-        "from torch_geometric.utils import add_self_loops, degree, to_dense_adj, softmax\n",
-        "import torch_scatter\n",
-        "\n",
-        "\n",
-        "class GATLayer(MessagePassing):\n",
-        "    def __init__(self, in_features, out_features, dropout =0.6, alpha = 0.2, concat=True):\n",
-        "        super(GATLayer, self).__init__()\n",
-        "        self.dropout       = dropout        # drop prob = 0.6\n",
-        "        self.in_features   = in_features    #\n",
-        "        self.out_features  = out_features   #\n",
-        "        self.alpha         = alpha          # LeakyReLU with negative input slope, alpha = 0.2\n",
-        "        self.concat        = concat         # conacat = True for all layers except the output layer.\n",
-        "\n",
-        "\n",
-        "        # Xavier Initialization of Weights\n",
-        "        # Alternatively use weights_init to apply weights of choice\n",
-        "        self.W = nn.Parameter(torch.zeros(size=(in_features, out_features)))\n",
-        "        nn.init.xavier_uniform_(self.W.data, gain=1.414)\n",
-        "\n",
-        "        self.a = nn.Parameter(torch.zeros(size=(2*out_features, 1)))\n",
-        "        nn.init.xavier_uniform_(self.a.data, gain=1.414)\n",
-        "\n",
-        "        # LeakyReLU\n",
-        "        self.leakyrelu = nn.LeakyReLU(self.alpha)\n",
-        "\n",
-        "    def forward(self, input, adj):\n",
-        "        # Linear Transformation\n",
-        "        h = torch.mm(input, self.W) # matrix multiplication\n",
-        "        N = h.size()[0]\n",
-        "        adj = to_dense_adj(adj)\n",
-        "        print(adj)\n",
-        "        # Attention Mechanism\n",
-        "        a_input = torch.cat([h.repeat(1, N).view(N * N, -1), h.repeat(N, 1)], dim=1).view(N, -1, 2 * self.out_features)\n",
-        "        e       = self.leakyrelu(torch.matmul(a_input, self.a).squeeze(2))\n",
-        "\n",
-        "        # Masked Attention\n",
-        "        zero_vec  = -9e15*torch.ones_like(e)\n",
-        "        attention = torch.where(adj > 0, e, zero_vec)\n",
-        "\n",
-        "        attention = F.softmax(attention, dim=1)\n",
-        "        attention = F.dropout(attention, self.dropout, training=self.training)\n",
-        "        h_prime   = torch.matmul(attention, h)\n",
-        "\n",
-        "        if self.concat:\n",
-        "            return F.elu(h_prime)\n",
-        "        else:\n",
-        "            return h_prime\n"
-      ],
-      "metadata": {
-        "id": "6YtJM9eEObDE"
-      },
-      "execution_count": 2,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -190,7 +136,7 @@
       "metadata": {
         "id": "JSJQslgnTeD8"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +173,7 @@
         },
         "outputId": "fab7202e-ca0a-4e43-f96b-566bdd8be2cd"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +231,7 @@
         },
         "outputId": "4b83fddb-0062-4d8e-ebdd-f7bbfc088fca"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,7 +457,7 @@
         },
         "outputId": "ca0c43b2-9cca-4a4e-c5db-474f1fa0642c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
